tests/snapshots/main__legacy_shorthand.snap
---
source: tests/main.rs
expression: transcript
---
> Start

page_count: 1
page_size: 512
dirty: []
dirties_before_flush: 100
free_lists:
  (none)

=== page 0 (metadata) ===
dirties_before_flush: 100

> alloc name=first data="legacy-1"

page_count: 2
page_size: 512
dirty: [0, 1]
dirties_before_flush: 100
free_lists:
  class 3 (8B): [1]

=== page 0 (metadata) ===
dirties_before_flush: 100

=== page 1 (data, class=3, slot_size=8, slots=60, bitmap_bytes=8) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 6c 65 67 61 63 79 2d 31  |legacy-1|

> alloc name=second data="legacy-2"

page_count: 2
page_size: 512
dirty: [0, 1]
dirties_before_flush: 100
free_lists:
  class 3 (8B): [1]

=== page 0 (metadata) ===
dirties_before_flush: 100

=== page 1 (data, class=3, slot_size=8, slots=60, bitmap_bytes=8) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 6c 65 67 61 63 79 2d 31  |legacy-1|
slot[1]: 6c 65 67 61 63 79 2d 32  |legacy-2|
