tests/snapshots/main__many_same_class.snap
---
source: tests/main.rs
expression: transcript
---
> Start

page_count: 1
page_size: 512
dirty: []
dirties_before_flush: 100
free_lists:
  (none)

=== page 0 (metadata) ===
dirties_before_flush: 100

> alloc name=a data="alpha"

page_count: 2
page_size: 512
dirty: [0, 1]
dirties_before_flush: 100
free_lists:
  class 3 (8B): [1]

=== page 0 (metadata) ===
dirties_before_flush: 100

=== page 1 (data, class=3, slot_size=8, slots=60, bitmap_bytes=8) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 61 6c 70 68 61 00 00 00  |alpha...|

> alloc name=b data="bravo"

page_count: 2
page_size: 512
dirty: [0, 1]
dirties_before_flush: 100
free_lists:
  class 3 (8B): [1]

=== page 0 (metadata) ===
dirties_before_flush: 100

=== page 1 (data, class=3, slot_size=8, slots=60, bitmap_bytes=8) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 61 6c 70 68 61 00 00 00  |alpha...|
slot[1]: 62 72 61 76 6f 00 00 00  |bravo...|

> alloc name=c data="charlie"

page_count: 2
page_size: 512
dirty: [0, 1]
dirties_before_flush: 100
free_lists:
  class 3 (8B): [1]

=== page 0 (metadata) ===
dirties_before_flush: 100

=== page 1 (data, class=3, slot_size=8, slots=60, bitmap_bytes=8) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2]
slot[0]: 61 6c 70 68 61 00 00 00  |alpha...|
slot[1]: 62 72 61 76 6f 00 00 00  |bravo...|
slot[2]: 63 68 61 72 6c 69 65 00  |charlie.|

> alloc name=d data="delta"

page_count: 2
page_size: 512
dirty: [0, 1]
dirties_before_flush: 100
free_lists:
  class 3 (8B): [1]

=== page 0 (metadata) ===
dirties_before_flush: 100

=== page 1 (data, class=3, slot_size=8, slots=60, bitmap_bytes=8) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3]
slot[0]: 61 6c 70 68 61 00 00 00  |alpha...|
slot[1]: 62 72 61 76 6f 00 00 00  |bravo...|
slot[2]: 63 68 61 72 6c 69 65 00  |charlie.|
slot[3]: 64 65 6c 74 61 00 00 00  |delta...|
