tests/snapshots/main__page_grow.snap
---
source: tests/main.rs
expression: transcript
---
> Start

page_count: 1
page_size: 512
dirty: []
dirties_before_flush: 100
free_lists:
  (none)

=== page 0 (metadata) ===
dirties_before_flush: 100

> alloc name=s0 data="0123456789abcdef0123456789abcdef!"

page_count: 2
page_size: 512
dirty: [0, 1]
dirties_before_flush: 100
free_lists:
  class 6 (64B): [1]

=== page 0 (metadata) ===
dirties_before_flush: 100

=== page 1 (data, class=6, slot_size=64, slots=7, bitmap_bytes=1) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|

> alloc name=s1 data="0123456789abcdef0123456789abcdef!"

page_count: 2
page_size: 512
dirty: [0, 1]
dirties_before_flush: 100
free_lists:
  class 6 (64B): [1]

=== page 0 (metadata) ===
dirties_before_flush: 100

=== page 1 (data, class=6, slot_size=64, slots=7, bitmap_bytes=1) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[1]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|

> alloc name=s2 data="0123456789abcdef0123456789abcdef!"

page_count: 2
page_size: 512
dirty: [0, 1]
dirties_before_flush: 100
free_lists:
  class 6 (64B): [1]

=== page 0 (metadata) ===
dirties_before_flush: 100

=== page 1 (data, class=6, slot_size=64, slots=7, bitmap_bytes=1) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2]
slot[0]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[1]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[2]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|

> alloc name=s3 data="0123456789abcdef0123456789abcdef!"

page_count: 2
page_size: 512
dirty: [0, 1]
dirties_before_flush: 100
free_lists:
  class 6 (64B): [1]

=== page 0 (metadata) ===
dirties_before_flush: 100

=== page 1 (data, class=6, slot_size=64, slots=7, bitmap_bytes=1) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3]
slot[0]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[1]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[2]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[3]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|

> alloc name=s4 data="0123456789abcdef0123456789abcdef!"

page_count: 2
page_size: 512
dirty: [0, 1]
dirties_before_flush: 100
free_lists:
  class 6 (64B): [1]

=== page 0 (metadata) ===
dirties_before_flush: 100

=== page 1 (data, class=6, slot_size=64, slots=7, bitmap_bytes=1) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3, 4]
slot[0]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[1]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[2]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[3]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[4]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|

> alloc name=s5 data="0123456789abcdef0123456789abcdef!"

page_count: 2
page_size: 512
dirty: [0, 1]
dirties_before_flush: 100
free_lists:
  class 6 (64B): [1]

=== page 0 (metadata) ===
dirties_before_flush: 100

=== page 1 (data, class=6, slot_size=64, slots=7, bitmap_bytes=1) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3, 4, 5]
slot[0]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[1]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[2]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[3]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[4]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[5]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|

> alloc name=s6 data="0123456789abcdef0123456789abcdef!"

page_count: 2
page_size: 512
dirty: [0, 1]
dirties_before_flush: 100
free_lists:
  class 6 (64B): [1]

=== page 0 (metadata) ===
dirties_before_flush: 100

=== page 1 (data, class=6, slot_size=64, slots=7, bitmap_bytes=1) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3, 4, 5, 6]
slot[0]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[1]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[2]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[3]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[4]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[5]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[6]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|

> alloc name=s7 data="0123456789abcdef0123456789abcdef!"

page_count: 3
page_size: 512
dirty: [0, 1, 2]
dirties_before_flush: 100
free_lists:
  class 6 (64B): [2, 1]

=== page 0 (metadata) ===
dirties_before_flush: 100

=== page 1 (data, class=6, slot_size=64, slots=7, bitmap_bytes=1) ===
prev: 2  next: 0
occupied_slots: [0, 1, 2, 3, 4, 5, 6]
slot[0]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[1]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[2]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[3]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[4]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[5]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
slot[6]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|

=== page 2 (data, class=6, slot_size=64, slots=7, bitmap_bytes=1) ===
prev: 0  next: 1
occupied_slots: [0]
slot[0]: 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 30 31 32 33 34 35 36 37 38 39 61 62 63 64 65 66 21 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |0123456789abcdef0123456789abcdef!...............................|
